# that-code

./: Makefile.am  README.md  bootstrap  configure.ac  delete-chars.c  endian.c  find-numbers.sh  find-overlap.sh  find-sub-string.sh  mit-plus-license.txt  named-pipe.sh  palindrome-test.sh  reverse-case.sh  reverse-string.sh  ring-buffer.c
